# cli-host

./: .gitignore  Cargo.toml  a.out  readme.md
cli-host/: Cargo.toml
cli-host/src/: main.rs
src/: host_impl.rs  lib.rs  macros.rs  main.rs
src/pluginterfaces/: mod.rs
src/pluginterfaces/base/: funknown.rs  ibstream.rs  ipluginbase.rs  mod.rs
src/pluginterfaces/gui/: mod.rs
src/pluginterfaces/vst/: ivstattributes.rs  ivstaudioprocessor.rs  ivstcomponent.rs  ivsteditcontroller.rs  ivstevents.rs  ivstnoteexpression.rs  ivstparameterchanges.rs  ivstprocesscontext.rs  ivstunits.rs  mod.rs  vsttypes.rs
vst3/: Cargo.toml
vst3-derive/src/: derive.rs  vst3impl.rs
vst3-host-boilerplate/: Cargo.toml
vst3-host-boilerplate/src/: boilerplate.rs  lib.rs
vst3-impl/: Cargo.toml
vst3-impl/src/: lib.rs
vst3-interfaces/: Cargo.toml
vst3-interfaces/src/: lib.rs  macros.rs
vst3-interfaces/src/base/: fstrdefs.rs  ibstream.rs  ipluginbase.rs
vst3-interfaces/src/vst/: ivstattributes.rs  ivstaudioprocessor.rs  ivsteditcontroller.rs  ivstevents.rs  ivstparameterchanges.rs  ivstprocesscontext.rs  ivstunits.rs
vst3/src/: boilerplate.rs  lib.rs
vst3/vst3-derive/: Cargo.toml
vst3/vst3-derive/src/: derive.rs  lib.rs  vst3impl.rs
vst3/vst3-impl/src/: lib.rs
vst3/vst3-interfaces/src/: lib.rs  macros.rs
vst3/vst3-interfaces/src/base/: ftypes.rs  funknown.rs  ibstream.rs  ipluginbase.rs  mod.rs
vst3/vst3-interfaces/src/gui/: mod.rs
vst3/vst3-interfaces/src/vst/: ivstattributes.rs  ivstaudioprocessor.rs  ivstcomponent.rs  ivsteditcontroller.rs  ivstevents.rs  ivstnoteexpression.rs  ivstparameterchanges.rs  ivstprocesscontext.rs  ivstunits.rs  mod.rs  vsttypes.rs
